# mcp-latex-proofread

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/: main.py
tests/: example.tex  test_server.py
