[project]
name = "mcp-latex-proofread"
version = "0.1.0"
description = "MCP server for managing LLM-authored LaTeX comment macros"
authors = [{ name = "Holger Dell", email = "holgerdell@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.27.0",
    "pydantic>=2.13.2",
]

[project.urls]
Repository = "https://github.com/holgerdell/mcp-latex-proofread"

[project.scripts]
mcp-latex-proofread = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "mypy>=1.20.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
python_executable = ".venv/bin/python"
mypy_path = ["src"]
# Extra strictness beyond --strict
warn_unreachable = true
warn_unused_configs = true
disallow_any_explicit = true
extra_checks = true
